--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   mysql:
     image: mysql:5.7.32
     container_name: mysql-service
-    restart: unless-stopped
+    restart: on-failure
     tty: true
     ports:
       - "4306:3306"
